# firefly-firmware

./: .gitignore  .gitmodules  .ignore  Cargo.toml  README.md  SETUP_WINDOWS.md  build.rs  devenv.nix  flake.nix  memory.x  run.ps1  run.sh  rustc-ice-2024-05-15T16_57_31-23779.txt  rustc-ice-2024-05-15T16_58_45-24716.txt  rustc-ice-2024-05-15T17_02_27-25061.txt  rustc-ice-2024-05-15T17_41_54-29094.txt  rustc-ice-2024-05-24T10_17_37-3264.txt  rustc-ice-2024-05-24T10_36_42-3624.txt
.cargo/: config.toml
docs/: SETUP.md  SETUP_WINDOWS.md
host-tools/: .gitignore  Cargo.toml
host-tools/src/: app.rs  flash.rs  main.rs  os.rs  ui.rs
src/: altimeter.rs  bmp388.rs  bmp581.rs  bno085.rs  config.rs  dfu.rs  futures.rs  gps.rs  ina219.rs  logger.rs  logs.rs  main.rs  mission.rs  ms5607.rs  neopixel.rs  otp.rs  pins.rs  radio.rs  sdcard.rs  sdio.rs  stepper.rs  usb_logger.rs  usb_msc.rs  words.rs
storage-types/: Cargo.toml
storage-types/src/: lib.rs  logs.rs
utils/: Cargo.toml  plot.py  requirements.txt
utils/ffplotter/: .gitignore  Cargo.toml
utils/ffplotter-lib/: Cargo.toml
utils/ffplotter-lib/src/: lib.rs
utils/ffplotter-web/: Cargo.toml  package-lock.json  package.json
utils/ffplotter-web/src/: lib.rs
utils/ffplotter-web/web/: package-lock.json  package.json  svelte.config.js  vite.config.ts
utils/ffplotter-web/web/src/: app.css  app.d.ts  app.html
utils/ffplotter-web/web/src/lib/: button.svelte  device.svelte  devices.svelte  index.ts  terminal.svelte  usbpopup.svelte
utils/ffplotter-web/web/src/lib/devices/: remote-firefly.ts  serial-device.ts  serial-firefly.ts  test-serial.ts
utils/ffplotter-web/web/src/routes/: +layout.svelte  +page.svelte  +page.ts
utils/ffplotter/src/: main.rs
webui/: art.stl  comms.js  imu.html  index.html  sketch.js  style.css
