[package]
name = "cansat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal="0.2"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
usb-device="0.2"
usbd-serial = "0.1"

smart-leds = "0.3"
ws2812-timer-delay = "0.3"
cassette = "0.2"
futures = { version = "0.3", default-features = false, features= ["async-await"] }

[dependencies.stm32f4xx-hal]
version = "0.13.2"
features = ["rt", "stm32f405", "usb_fs", "sdio", "sdio-host"] # replace the model of your microcontroller here
