[package]
name = "cansat"
version = "0.1.0"
edition = "2021"

# Minimise size of the binary
[profile.dev]
opt-level = "z"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
msc = []

[dependencies]
embedded-hal="0.2"
nb = "1"
cortex-m = {version = "0.7.3", features=["critical-section-single-core"]}
cortex-m-rt = "0.7"
usb-device="0.3.1"
usbd-serial = "0.2"

smart-leds = "0.3"
ws2812-timer-delay = "0.3"
cassette = "0.2"
futures = { version = "0.3", default-features = false, features= ["async-await"] }
cortex-m-semihosting = "0.5.0"
nmea0183 = { version = "0.3.0", path="nmea0183" }
heapless = "0.7.0"
sx126x = { version = "0.1.1", path="sx126x-rs" }
dummy-pin = "0.1.1"
libm = "0.2.6"
embedded-sdmmc = "0.4.0"
fugit = {version = "0.3.6", features = []}
f4-w25q = {version = "0.1.0", path="f4-w25q"}
serde = { version = "1.0", features = ["derive"], default-features = false }    
serde-big-array = "0.5.1"
tmc2209 = "0.2.2"
postcard = "1.0.4"
usbd_mass_storage = { version="0.1.0", path="stm32-usb.rs/firmware/usbd_mass_storage" }
usbd_scsi = {version = "0.1.0", path="stm32-usb.rs/firmware/usbd_scsi"}
littlefs2 = { version="0.4.0" }
time = {version = "0.3.20", default-features=false }
thingbuf = { version="0.1.0", default-features=false, features=["static"] }
serde-json-core = "0.5.1"

[dependencies.stm32f4xx-hal]
version = "0.20"
path="stm32f4xx-hal"
features = ["stm32f412", "usb_fs", "sdio", "sdio-host"] # replace the model of your microcontroller here
