[package]
name = "cansat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
msc = []
target-mini = []
target-maxi = []

[profile.release]
debug = true # No harm in enabling symbols, they're not loaded onto the mcu

[profile.dev.package.ws2812-spi]
opt-level = 3

[dependencies]
embedded-hal="1.0"
nb = "1"
cortex-m = {version = "0.7.3", features=["critical-section-single-core"]}
cortex-m-rt = "0.7"
usb-device="0.3.1"
usbd-serial = "0.2"

smart-leds = "0.3"
ws2812-spi = "0.4"
embassy-executor = { version = "0.5.0", features = [ "executor-thread", "task-arena-size-32768", "arch-cortex-m" ] }
embassy-futures = "0.1.1"

futures = { version = "0.3", default-features = false, features= ["async-await"] }
cortex-m-semihosting = "0.5.0"
nmea0183 = { version = "0.3.0", path="nmea0183" }
heapless = "0.7.0"
sx126x = { version = "0.1.1", path="sx126x-rs" }
dummy-pin = "1.0"
libm = "0.2.6"
embedded-sdmmc = "0.4.0"
fugit = {version = "0.3.6", features = []}
f4-w25q = {version = "0.1.0", path="f4-w25q", features=["embedded-storage"]}
serde = { version = "1.0", features = ["derive"], default-features = false }    
serde-big-array = "0.5.1"
postcard = "1.0.4"
usbd_mass_storage = { version="0.1.0", path="stm32-usb.rs/firmware/usbd_mass_storage" }
usbd_scsi = {version = "0.1.0", path="stm32-usb.rs/firmware/usbd_scsi"}
time = {version = "0.3.20", default-features=false, features=["macros"] }
thingbuf = { version="0.1.0", default-features=false, features=["static"] }
serde-json-core = "0.5.1"
sequential-storage = { version= "1.0.0" }
storage-types = { version="0.1.0", path="storage-types" }
bmp388 = { version="0.1.0", path="bmp388" }
icm20948_driver = { version="0.2", path="icm20948_driver"}
embedded-hal-bus = { version="0.2.0" }
critical-section = "1.1.2"
atomic_enum = "0.3.0"
bno080 = { version="0.1.3", git="https://github.com/tstellanova/bno080" }
tmc2209 = { version="0.2.2", git="https://github.com/mitchmindtree/tmc2209" }

[dependencies.stm32f4xx-hal]
version = "0.20"
path="stm32f4xx-hal"
features = ["stm32f412", "usb_fs", "sdio", "sdio-host"] # replace the model of your microcontroller here
