[package]
name = "host-tools"
version = "0.1.0"
edition = "2021"

[features]
windows = ["dep:winapi"]
default = ["windows"]

[profile.release]
opt-level = 3
lto = "fat"

[dependencies]
anyhow = "1.0.81"
crossterm = "0.27.0"
embedded-storage-async = "0.4.1"
heapless = "0.8.0"
rand = "0.8.5"
ratatui = "0.26.1"
sequential-storage = { version= "3.0.1" }
serde_json = "1.0.117"
storage-types = {version = "0.1.0", path="../storage-types"}
syntect = "5.2.0"
tokio = { version = "1.36.0", features = ["full"] }
tui-menu = {version= "0.1.2", path="tui-menu" }
winapi = { version="0.3.9", optional=true, features=["ioapiset", "winioctl"] }
