[package]
name = "ffplotter"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = "0.6.5"
env_logger = "0.11.8"
ffplotter-lib = { version = "0.1", path="../ffplotter-lib"}
log = "0.4.27"
piston = "1.0.0"
piston_window = "0.132.0"
plotters = "0.3.7"
plotters-piston = { version =  "0.3.1", path = "plotters-piston" }
